@@ -1,0 +1,8 @@
+/*****************************************************************************\
+ *  $Id: cerebro_metric_control.h,v 1.1 2005-07-12 19:57:07 achu Exp $
+\*****************************************************************************/
+
+#ifndef _CEREBRO_METRIC_CONTROL_H
+#define _CEREBRO_METRIC_CONTROL_H
+
+#endif /* _CEREBRO_METRIC_CONTROL_H */
