@@ -1,6 +1,8 @@
 2005-07-12  Albert Chu  <chu11@llnl.gov>
 
 	* Continued work on metric controller.
+
+	* Begin work on libcerebro control functions.
 	
 2005-07-11  Albert Chu  <chu11@llnl.gov>
 
